<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <!-- The left navigation drawer -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ccc" >

        <LinearLayout
            android:id="@+id/lateral_menu_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:clickable="true"
            android:divider="@android:color/background_dark"
            android:dividerHeight="1dp"
            android:maxWidth="320dp"
            android:minWidth="120dp"
            android:orientation="vertical"
            android:showDividers="middle" >

            <TextView
                android:id="@+id/drawable_capture"
                style="@style/DrawerItem"
                android:text="@string/drawable_capture" />

            <TextView
                android:id="@+id/drawable_around"
                style="@style/DrawerItem"
                android:text="@string/drawable_around" />

            <TextView
                android:id="@+id/drawable_follow"
                style="@style/DrawerItem"
                android:text="@string/drawable_follow" />

            <TextView
                android:id="@+id/drawable_historic"
                style="@style/DrawerItem"
                android:text="@string/drawable_historic" />

            <TextView
                android:id="@+id/drawable_account"
                style="@style/DrawerItem"
                android:text="@string/drawable_account" />

            <TextView
                android:id="@+id/drawable_servlet"
                style="@style/DrawerItem"
                android:text="@string/drawable_servlet" />
        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.DrawerLayout>