<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.geojir.CaptureActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true" 
        android:focusableInTouchMode="true"
        android:orientation="vertical" >
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <ImageView
	            android:id="@+id/imagePhotos"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:contentDescription="@string/ic_photo_description"
	            android:src="@drawable/ic_photo" />
	
		    <ImageView
		        android:id="@+id/imageMicro"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/ic_micro_description"
		        android:src="@drawable/ic_micro" />
		
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textViewPhoto"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/ic_photo_label" />
	
	        <TextView
	            android:id="@+id/textViewMicro"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/ic_micro_label" />
	        
	    </LinearLayout>
	
	    <FrameLayout
	        android:id="@+id/contentMediaCapture"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
			<LinearLayout 
			    android:id="@+id/photoFrame"
	  			android:orientation="vertical"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent" >
			
		        <com.geojir.view.CaptureImageView
				    xmlns:android="http://schemas.android.com/apk/res/android"
					android:id="@+id/captureImageView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:minHeight="200dp"
					android:layout_marginLeft="32dp"
					android:layout_marginRight="32dp"
					android:layout_marginTop="32dp"
					android:contentDescription="@string/ic_medias_description"
					android:src="@drawable/loading" />
				
		        
				<CheckBox
				    android:id="@+id/filterMonochrome"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/black_and_white" />
			
			</LinearLayout>
			      
			<LinearLayout 
			    android:id="@+id/audioFrame"
	  			android:orientation="vertical"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent" >
			    
			    <Button
			        android:id="@+id/recordAudioButton"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/save_song" />
			
			    <Button
			        android:id="@+id/playAudioButton"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/play_song" />
			    
			</LinearLayout>
		
		</FrameLayout>   
	
	    <EditText
	        android:id="@+id/commentText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/comment"
	        android:ems="10"
	        android:inputType="textMultiLine" >

	        <requestFocus />
	    </EditText>
	
	    <Button
	        android:id="@+id/saveMediaButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/save_media" />

	    <ProgressBar
	        android:id="@+id/progressBar"
	        style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_gravity="center"
	        />

	</LinearLayout>
	
</ScrollView>
